--- a/node/egg-server/package.json
+++ b/node/egg-server/package.json
@@ -11,7 +11,8 @@
     "egg-cors": "^2.2.3",
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.11.0",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "uglify-js": "^3.13.4"
   },
   "devDependencies": {
     "autod": "^3.0.1",
