refactor: babel 相关模块

--- a/node/egg-server/package.json
+++ b/node/egg-server/package.json
@@ -7,6 +7,8 @@
     "declarations": true
   },
   "dependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
     "egg": "^2.15.1",
     "egg-cors": "^2.2.3",
     "egg-mysql": "^3.0.0",
